--- a/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/pages/inicial/inicial.xhtml
+++ b/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/pages/inicial/inicial.xhtml
@@ -19,8 +19,7 @@
 	    			<p:toolbarGroup align="left">
 	    				<h:panelGrid columns="3" cellpadding="5">
 				    		<p:selectOneMenu value="#{mainBean.selectedMethod}">
-				    			<f:selectItem itemLabel="Linear Regression" itemValue="1" />
-				    			<f:selectItem itemLabel="LOESS" itemValue="2" />
+				    			<f:selectItems value="#{autocompleteBean.listMethods}" />
 				    		</p:selectOneMenu>
 				    		<p:selectOneMenu value="#{mainBean.selectedParameter}">
 				    			<f:selectItem itemLabel="Dados do RU" itemValue="1" />
@@ -78,7 +77,7 @@
     		</div>
     		<div class="rightPanel">
     			<p:panel header="Chart" styleClass="panel">
-    			
+    				<p:lineChart id="lineChart" value="#{mainBean.chartModel}" title="Linear Chart" rendered="#{mainBean.showChart}" />
     			</p:panel>
     		</div>
     	</h:form>
@@ -88,7 +87,7 @@
 			<p:dialog header="Load File" widgetVar="fileDialog" resizable="false" draggable="false" modal="true" footer="Somente arquivos .csv">
 		    	<h:form enctype="multipart/form-data">  
 		    		<h:panelGrid columns="2">
-					    <p:fileUpload value="#{mainBean.file}" mode="simple"/>
+					    <p:fileUpload value="#{mainBean.file}" mode="simple" />
 					    <p:commandButton value="Ok" ajax="false" icon="ui-icon-check" action="#{mainBean.loadFile}" />  
 		    		</h:panelGrid>
 				</h:form>  
